@@ -12,7 +12,7 @@
 
   <groupId>com.azure</groupId>
   <artifactId>azure-communication-email</artifactId>
-  <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure:azure-communication-email;current} -->
+  <version>1.0.15</version> <!-- {x-version-update;com.azure:azure-communication-email;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure Communications SDK for Email</name>
@@ -46,26 +46,23 @@
     <jacoco.min.linecoverage>0.70</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0.45</jacoco.min.branchcoverage>
     <jacoco.skip>true</jacoco.skip>
-    <javaModulesSurefireArgLine>
-      --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
-    </javaModulesSurefireArgLine>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core</artifactId>
-      <version>1.51.0</version> <!-- {x-version-update;com.azure:azure-core;dependency} -->
+      <version>1.50.0</version> <!-- {x-version-update;com.azure:azure-core;dependency} -->
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core-http-netty</artifactId>
-      <version>1.15.3</version> <!-- {x-version-update;com.azure:azure-core-http-netty;dependency} -->
+      <version>1.15.2</version> <!-- {x-version-update;com.azure:azure-core-http-netty;dependency} -->
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-communication-common</artifactId>
-      <version>1.3.5</version> <!-- {x-version-update;com.azure:azure-communication-common;dependency} -->
+      <version>1.3.4</version> <!-- {x-version-update;com.azure:azure-communication-common;dependency} -->
     </dependency>
 
     <!-- Test dependencies -->
@@ -78,13 +75,13 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core-test</artifactId>
-      <version>1.26.2</version> <!-- {x-version-update;com.azure:azure-core-test;dependency} -->
+      <version>1.26.1</version> <!-- {x-version-update;com.azure:azure-core-test;dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-identity</artifactId>
-      <version>1.13.2</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
+      <version>1.13.1</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -96,13 +93,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core-http-okhttp</artifactId>
-      <version>1.12.2</version> <!-- {x-version-update;com.azure:azure-core-http-okhttp;dependency} -->
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.azure</groupId>
-      <artifactId>azure-core-http-vertx</artifactId>
-      <version>1.0.0-beta.20</version> <!-- {x-version-update;com.azure:azure-core-http-vertx;dependency} -->
+      <version>1.12.1</version> <!-- {x-version-update;com.azure:azure-core-http-okhttp;dependency} -->
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -116,10 +107,10 @@
         <configuration>
           <codesnippetGlob>**/src/samples/java/**/*.java</codesnippetGlob>
           <codesnippetRootDirectory>${project.basedir}/src/samples/java</codesnippetRootDirectory>
-          <readmePath>${project.basedir}/README.md</readmePath>
           <sourceGlob>**/src/main/java/**/*.java</sourceGlob>
           <sourceRootDirectory>${project.basedir}/src/main/java</sourceRootDirectory>
           <includeSource>true</includeSource>
+          <readmePath>${project.basedir}/README.md</readmePath>
           <includeReadme>true</includeReadme>
           <maxLineLength>120</maxLineLength>
           <skip>false</skip>
@@ -143,21 +134,4 @@
       </plugin>
     </plugins>
   </build>
-
-  <profiles>
-    <profile>
-      <id>java12plus</id>
-      <activation>
-        <jdk>[12,)</jdk>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>com.azure</groupId>
-          <artifactId>azure-core-http-jdk-httpclient</artifactId>
-          <version>1.0.0-beta.15</version> <!-- {x-version-update;com.azure:azure-core-http-jdk-httpclient;dependency} -->
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-  </profiles>
 </project>
